# dotfiles

./: .aliases  .env  .environment  .gitmodules  .path  .stalonetrayrc  .tmux.conf  .xinitrc  .zshrc
.bin/: acpi_handler.sh  backlight.hs  bat-status.hs  cpu-load.hs  get-wallpaper  lock  mem-load.hs  runghc-cached.sh  screenshot.sh  start-pipewire.sh  updates  xmobar-stalonetray-pad
.completions/: tldr
.config/: picom.conf  user-dirs.dirs
.config/alacritty/: alacritty.toml  alacritty.yml
.config/dunst/: dunstrc
.config/nvim/: init.vim
.config/nvim/after/ftplugin/cpp/: main.vim
.config/nvim/after/syntax/haskell/: main.vim
.config/nvim/ftplugin/asm/: main.vim
.config/nvim/ftplugin/c/: main.vim
.config/nvim/ftplugin/cpp/: main.vim
.config/nvim/ftplugin/haskell/: main.vim
.config/nvim/ftplugin/tex/: main.vim
.tmux/: airline.conf
.xmonad/: build  my-xmonad.cabal  package.yaml  stack.yaml  xmobar.hs  xmobarrc  xmonad.hs
Desktop/: hiddify.desktop  telegram.desktop
desktop/: steam.desktop
