name:                my-xmonad
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable my-xmonad
  main-is:             ../xmonad.hs
  -- other-modules lists custom modules in my ~/.xmonad/lib/ directory
  other-modules:
  build-depends:       base
                     , xmonad >= 0.15
                     , xmonad-contrib >= 0.16
                     , hint >= 0.9.0.4
                     , data-default
                     , containers
                     , directory
                     , filepath
                     , process
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -fno-warn-missing-signatures -threaded
